log
Thu 28 Sep 2023 01:56:04 PM UTC: 
 tests:  0|4
total_score: 0/70
24bb2c2
Thu 28 Sep 2023 02:12:12 PM UTC: 
 heap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  0|0
   [ INFO ] Heap* h = createHeap()
81f7ccc
Thu 28 Sep 2023 02:12:49 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
73047f7
Thu 28 Sep 2023 02:12:58 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
e31d5f0
Thu 28 Sep 2023 02:14:26 PM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|2
total_score: 20/70
99a9f90
Thu 28 Sep 2023 02:33:52 PM UTC: 
 heap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  2|2
total_score: 20/70
d53f8c9
Thu 28 Sep 2023 02:39:41 PM UTC: 
 heap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:47:35: error: self-comparison always evaluates to false [-Werror=tautological-compare]
   47 |     if (pq->heapArray[index].data < pq->heapArray[index].data) {
      |                                   ^
heap.c:49:43: error: array subscript is not an integer
   49 |       pq->heapArray[index] = pq->heapArray[data];
      |                                           ^
heap.c:50:20: error: array subscript is not an integer
   50 |       pq->heapArray[data] = temp;
      |                    ^
heap.c:51:13: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   51 |       index = data;
      |             ^
cc1: all warnings being treated as errors
Compilation failed
07946c6
Thu 28 Sep 2023 02:40:05 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:47:39: error: self-comparison always evaluates to false [-Werror=tautological-compare]
   47 |     if (pq->heapArray[index].priority < pq->heapArray[index].priority) {
      |                                       ^
heap.c:49:43: error: array subscript is not an integer
   49 |       pq->heapArray[index] = pq->heapArray[data];
      |                                           ^
heap.c:50:20: error: array subscript is not an integer
   50 |       pq->heapArray[data] = temp;
      |                    ^
heap.c:51:13: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   51 |       index = data;
      |             ^
cc1: all warnings being treated as errors
Compilation failed
96489a3
